--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -10,17 +10,16 @@ a:link, a:visited { text-decoration: none; color: #666 }
 a:hover { text-decoration: none; }
 .clear { clear: both; }
 .blank { height: 5px; overflow: hidden; width: 100%; margin: auto; clear: both }
-.f_l { float: left }
+.f_l { float: left}
 .f_r { float: right }
 .l_box { width: 670px; }
 .r_box { width: 300px; }
 /* 头部信息 */
 header { width: 1000px; margin: 20px auto; overflow: hidden; clear: both; }
-#topnav { width: 60%; background: #48AE15; height: 46px; line-height: 46px; text-align: center; border-radius: 46px; }
+#topnav { width: 60%; background: #ADD8E6; height: 46px; line-height: 46px; text-align: center; border-radius: 46px;margin-top: 20px }
 #topnav a { display: inline-block; font-size: 18px; font-family: "Microsoft Yahei", Arial, Helvetica, sans-serif; padding: 0 20px; }
 #topnav a:hover { background: #fff; color: #000; }
 #topnav a { color: #FFF }
-#topnav_current { background: #F3FF41; }/* 高亮选中颜色 */
 a#topnav_current { color: #000 }
 article { width: 1000px; margin: 20px auto; }
 /*footer*/
