--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -24,7 +24,7 @@ a#topnav_current { color: #000 }
 article { width: 1000px; margin: 20px auto; }
 /*footer*/
 footer { background: #333; width: 100%; clear: both; text-align: center; }
-.ft-copyright { color: #fff; line-height: 24px; }
+.ft-copyright { color: #fff; line-height: 24px;}
 /*·µ»Ø¶¥²¿*/
 #togbook, #gotop { width: 54px; height: 56px; display: block; background: url(../images/icons.png) no-repeat #111; box-shadow: 0px 1px 0px rgba(255,255,255,.1), inset 0px 1px 1px rgba(0,0,0,.7); border-radius: 6px; }
 #togbook { margin: 5px 0; background-position: 10px -36px; }
@@ -52,7 +52,7 @@ footer { background: #333; width: 100%; clear: both; text-align: center; }
 .ms-top { height: 32px; border-bottom: solid 1px #EAEAEA; font-size: 14px }
 #tab li a { float: left; height: 32px; cursor: pointer; line-height: 32px; list-style-type: none; padding: 0 15px; }
 #tab li.cur a { color: #fff; background: #f77825; }
-.bd { display: none }
+.bd { display: none; height: 260px; }
 .bd-news ul { padding: 10px 0 0 10px; background: url(../images/ph2.png) no-repeat 10px 29px; }
 .bd-news ul li { border-bottom: solid 1px #EAEAEA; line-height: 30px; height: 30px; overflow: hidden; font-size: 14px; padding: 10px 0 0 30px; }
 .bd-news ul li a { display: block; }
