--- a/src/assets/styles/Diaspora.css
+++ b/src/assets/styles/Diaspora.css
@@ -1,4 +1,4 @@
-body, div, h1, h2, h3, h4, h5, p, ul, li {
+body, div, h1, h2, h3, h4, h5, p, ul, li, header {
     margin: 0;
     padding: 0;
     font-weight: normal;
@@ -47,7 +47,7 @@ body.loading:before {
   50% { -moz-transform:scale(1.0); }
   100% { -moz-transform:scale(0.3); }
 }
-body.loading #container, body.loading #single, body.loading .nav {
+body.loading #container, body.loading #single, body.loading .header-nav {
     opacity: 0;
 }
 html.loading, body.loading {
@@ -415,7 +415,7 @@ body.touch #top {
 body.touch .scrollbar {
     display: none;
 }
-.nav {
+.header-nav {
     position: fixed;
     height: 100%;
     width: 100%;
@@ -439,7 +439,7 @@ body.mu .icon-menu {
 body.mu .icon-menu:before {
     content: "\e609";
 }
-body.mu .nav {
+body.mu .header-nav {
     top: 0;
 }
 body.mu .icon-logo {
@@ -462,7 +462,7 @@ body.mu .icon-logo {
 .menu a:hover {
     color: #333;
 }
-.nav p {
+.header-nav p {
     color: #999;
     font-size: 14px;
     position: absolute;
@@ -470,7 +470,7 @@ body.mu .icon-logo {
     text-align: center;
     bottom: 30px;
 }
-.nav p:first-letter {
+.header-nav p:first-letter {
     font-family: sans-serif;
 }
 
@@ -493,6 +493,7 @@ body.mu .icon-logo {
 #primary {
     position: relative;
 }
+
 #single {
     background: #fff;
     position: relative;
@@ -995,22 +996,22 @@ ol.children li {
 .logged-in-as a, .must-log-in a, .comment-meta + p a {
     color: #EF6D57;
 }
-.comment-navigation h2 {
+.comment-header-navigation h2 {
     display: none;
 }
-.nav-links {
+.header-nav-links {
     margin-top: 20px;
     overflow: hidden;
 }
-.nav-links div {
+.header-nav-links div {
     float: left;
     width: 50%;
 }
-.nav-links .nav-next {
+.header-nav-links .header-nav-next {
     float: right;
     text-align: right;
 }
-.nav-links a {
+.header-nav-links a {
     color: #EF6D57;
 }
 
