--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -31,7 +31,7 @@ footer { background: #333; width: 100%; clear: both; text-align: center; }
 .cloud { width: 100%; clear: both; overflow: hidden }
 .cloud h3 { line-height: 40px; color: #38485A; font-size: 18px; border-bottom: 1px solid #E6E6E6; height: 40px; }
 .cloud ul { margin: 20px 0 }
-.cloud ul li { line-height: 24px; height: 24px; display: block; background: #999; float: left; padding: 3px 11px; margin: 10px 10px 0 0; border-radius: 8px; -moz-transition: all 0.5s; -webkit-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
+.cloud ul li { line-height: 24px; height: 24px; display: block; background: #999; float: left; padding: 0 11px; margin: 10px 10px 0 0; border-radius: 8px; -moz-transition: all 0.5s; -webkit-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
 .cloud ul li a { color: #FFF }
 .cloud ul li:nth-child(8n-7) { background: #8A9B0F }
 .cloud ul li:nth-child(8n-6) { background: #EB6841 }
